# lwid

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  Makefile  PLAN.md  README.md  SKILL.md  config.example.toml  install.ps1  install.sh
.github/workflows/: release.yml
crates/lwid-cli/: Cargo.toml  build.rs
crates/lwid-cli/src/: client.rs  clone.rs  config.rs  global_config.rs  login.rs  main.rs  pull.rs  push.rs  secrets.rs  store.rs
crates/lwid-common/: Cargo.toml  build.rs
crates/lwid-common/src/: auth.rs  cid.rs  crypto.rs  kv.rs  lib.rs  limits.rs  manifest.rs  project.rs  store.rs  wire.rs
crates/lwid-server/: Cargo.toml  build.rs
crates/lwid-server/migrations/: 001_initial.sql
crates/lwid-server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  reaper.rs
crates/lwid-server/src/api/: blobs.rs  mod.rs  projects.rs  skill.rs  store.rs
crates/lwid-server/src/auth/: handlers.rs  magic.rs  mod.rs  session.rs
crates/lwid-server/src/auth/oauth/: github.rs  google.rs  mod.rs
crates/lwid-server/tests/: api_integration.rs
deploy/: certificate.yaml  clusterissuer.yaml  deploy.sh  deployment.yaml  ingress.yaml  juicefs-secret.yaml  namespace.yaml  redis.yaml  service.yaml  storage.yaml
examples/guestbook/: .gitignore  index.html
examples/guestbook/css/: style.css
shell/: SKILL-store.md  SKILL.md  docs.html  index.html  sw.js  terms.html
shell/css/: docs.css  style.css
shell/js/: api.js  auth.js  cid.js  crypto.js  detect-secrets.js  lwid-sdk.js  manifest.js  project.js  secret-rules.js
