[package]
name = "lwid-server"
version = "0.1.0"
edition = "2024"
description = "LookWhatIDid HTTP server"

[[bin]]
name = "lwid-server"
path = "src/main.rs"

[dependencies]
lwid-common = { path = "../lwid-common" }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI & config
clap = { version = "4", features = ["derive"] }

# Crypto (for base64 decoding of pubkeys/signatures in API handlers)
base64 = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
axum-test = "19"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1"
